# local-ai-orchestrator

./: .gitignore  README.md  orchestrator.toml  pyproject.toml
.github/workflows/: orchestrator-ci.yml
docs/: BUG_REPORT_SMOKE_2026-05-13.md  IMPROVEMENTS_AND_RISKS.md  IMPROVEMENTS_AND_RISKS_v2.md  PROJECT_OVERVIEW.md
orchestrator/: __init__.py  config.py  factory.py
orchestrator/api/: app.py  schemas.py
orchestrator/cli/: main.py
orchestrator/context/: __init__.py  base.py  cag.py  config_env.py  graph.py  logs.py  rag.py  repo.py  system.py
orchestrator/core/: complexity.py  context_router.py  engine.py  intent.py  metrics.py  model_router.py  sanitize.py  security.py  session.py
orchestrator/llm/: base.py  ollama.py
tests/: conftest.py  smoke_conversations.py  test_api.py  test_cli.py  test_complexity.py  test_config.py  test_context_router.py  test_engine.py  test_graph_cache.py  test_integration.py  test_intent.py  test_metrics.py  test_model_router.py  test_providers.py  test_security.py  test_session.py
