[project]
name = "ai-orchestrator"
version = "0.1.0"
description = "Local LLM Orchestrator — intent/complexity routing, context aggregation, model selection"
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
gpu = [
    "nvidia-ml-py>=12.0",
]

[project.scripts]
orc = "orchestrator.cli.main:main"

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=orchestrator --cov-report=term-missing"
markers = [
    "integration: tests requiring live services (Ollama, RAG)",
]

[tool.coverage.run]
source = ["orchestrator"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
